--- a/Dockerfile.telegraf
+++ b/Dockerfile.telegraf
@@ -1,5 +1,7 @@
 FROM ubuntu:22.04
 
+ARG IS_FLEX
+
 RUN if [ -n "$HTTP_PROXY" ] ; then  echo "Acquire::http::Proxy \"$HTTP_PROXY\";" >  /etc/apt/apt.conf; fi
 
 # Build and install igt for Arc and iGPU. Note although igt works for Flex, xpumcli is officially supported for Flex monitoring
@@ -36,6 +38,26 @@ RUN cd  xorg-intel-gpu-tools; meson build; ninja -C build; cd build; ninja insta
 # Build and install telegraf/influxdb: Reference: https://docs.influxdata.com/telegraf/v1.21/introduction/installation/
 WORKDIR ./opt/intel-gpu-telegraf
 
+RUN  apt-get update -y || true; DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends gnupg2 \
+ && \
+ apt-get clean && \
+ rm -rf /var/lib/apt/lists/*
+
+RUN \
+## flex gpu drivers
+ apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 9B10C065DBB72B06; \
+ wget -qO - https://repositories.intel.com/graphics/intel-graphics.key | gpg --dearmor --output /usr/share/keyrings/intel-graphics.gpg; \
+ echo 'deb [arch=amd64 signed-by=/usr/share/keyrings/intel-graphics.gpg] https://repositories.intel.com/graphics/ubuntu jammy flex' | tee  /etc/apt/sources.list.d/intel.gpu.jammy.list
+
+RUN apt-get update -y || true; DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends intel-gsc level-zero intel-level-zero-gpu pciutils \
+ && \
+ apt-get clean && \
+ rm -rf /var/lib/apt/lists/*
+
+#RUN wget https://github.com/intel/xpumanager/releases/download/V1.2.3/xpumanager_1.2.3_20230221.054746.0e2d4bfb+ubuntu22.04_amd64.deb; dpkg -i ./xpumanager_1.2.3_20230221.054746.0e2d4bfb+ubuntu22.04_amd64.deb
+RUN wget https://github.com/intel/xpumanager/releases/download/V1.2.6/xpu-smi_1.2.6_20230322.060757.98a08a04_u22.04_amd64.deb; dpkg -i ./xpu-smi_1.2.6_20230322.060757.98a08a04_u22.04_amd64.deb
+
+
 RUN \
 ## influxdata-archive_compat.key GPG Fingerprint: 9D539D90D3328DC7D6C8D3B9D8FF8E1F7DF8B07E
  wget -q https://repos.influxdata.com/influxdata-archive_compat.key; \
@@ -47,7 +69,10 @@ RUN apt-get update -y || true; DEBIAN_FRONTEND=noninteractive apt-get install -y
  apt-get clean && \
  rm -rf /var/lib/apt/lists/*
 
+
 COPY ./opt/intel-gpu-telegraf /opt/intel-gpu-telegraf
+RUN if [ -n "$IS_FLEX" ] ; then cp /opt/intel-gpu-telegraf/telegraf-flex.conf /opt/intel-gpu-telegraf/telegraf.conf; fi
+
 RUN telegraf --sample-config > telegraf-sample.conf
 
 CMD ["/usr/bin/telegraf", "--config", "/opt/intel-gpu-telegraf/telegraf.conf"]
