change plugin name from exec to gpu_usage

--- a/opt/intel-gpu-telegraf/telegraf-flex.conf
+++ b/opt/intel-gpu-telegraf/telegraf-flex.conf
@@ -33,6 +33,7 @@
 [[inputs.mem]]
 
 [[inputs.exec]]
+	name_override = "gpu_usage"
 	commands = ["bash /opt/intel-gpu-telegraf/get_intel_dgpu_flex_status.sh"]
    
 	timeout = "10s"
