--- a/opt/intel-gpu-telegraf/telegraf.conf
+++ b/opt/intel-gpu-telegraf/telegraf.conf
@@ -33,6 +33,7 @@
 [[inputs.mem]]
 
 [[inputs.exec]]
+	name_override = "gpu_usage"
 	commands = ["sh /opt/intel-gpu-telegraf/get_intel_igpu_arc_status.sh"]
    
 	timeout = "10s"
